# Automated-Multimodel-Compliance

./: .env.example  .gitignore  README.md  pyproject.toml  run_server.bat
app/api/: server.py
app/compliance/: evaluator.py  rules_engine.py  schemas.py
app/ingestion/: normalizer.py  ocr_processor.py  video_transcriber.py
app/llm/: client.py  output_parser.py  prompts.py
app/orchestration/: graph.py  nodes.py  router.py  state.py
app/retrieval/: chunking.py  embeddings.py  retriever.py  vector_store.py
app/static/: index.html
app/telemetry/: logging_config.py  tracing.py
app/utils/: config.py
automated_compliance_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: rules.yaml  settings.yaml
scripts/: index_policies.py  run_pipeline.py
tests/: test_compliance.py  test_retrieval.py
