[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "automated-compliance-orchestrator"
version = "0.1.0"
description = "Azure Multi-Modal Compliance Orchestration Engine using LangGraph (local tools)"
requires-python = ">=3.10"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",       # used for local-compatible LLM client

    # LLM - local
    "ollama>=0.2.0",                  # local LLM via Ollama
    "openai>=1.30.0",                 # optional: OpenAI-compatible API

    # RAG / Vector store
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",   # local embeddings

    # Ingestion - multimodal
    "openai-whisper>=20231117",        # local speech-to-text
    "pytesseract>=0.3.10",            # OCR
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.9.0",
    "yt-dlp>=2024.4.9",               # YouTube video downloader

    # API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Data / config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",

    # Observability
    "langsmith>=0.1.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
